syntax = "proto3";

package api.task.v1;

option go_package = "galileo/api/management/task/v1;v1";
option java_multiple_files = true;
option java_package = "api.management.task.v1";

service Task {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskReply);
  rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskReply);
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskReply);
  rpc GetTask (GetTaskRequest) returns (GetTaskReply);
  rpc ListTask (ListTaskRequest) returns (ListTaskReply);
}

message CreateTaskRequest {
  string name = 1;
  int32 rank = 2;
  int32 type = 3;
  string description = 4;
  repeated int64 testcaseSuiteId = 5;
}

message CreateTaskReply {
  int64 id = 1;
  int32 status = 2;
  int64 createdAt = 3;
}

message UpdateTaskRequest {}
message UpdateTaskReply {}

message DeleteTaskRequest {}
message DeleteTaskReply {}

message GetTaskRequest {}
message GetTaskReply {}

message ListTaskRequest {}
message ListTaskReply {}